--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "alexpechkarev/google-maps":"5.8"
+        "alexpechkarev/google-maps":"5.8",
+        "cartalyst/stripe-laravel": "10.0.*",
+        "laravelcollective/html": "~5.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
