--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "alexpechkarev/google-maps":"5.8",
+        "ixudra/curl": "6.*",
         "cartalyst/stripe-laravel": "10.0.*",
         "laravelcollective/html": "~5.0"
     },
