--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "alexpechkarev/google-maps": "5.8",
+        "barryvdh/laravel-dompdf": "^0.8.6",
+        "cartalyst/stripe-laravel": "10.0.*",
         "fideloper/proxy": "^4.0",
+        "ixudra/curl": "6.*",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "alexpechkarev/google-maps":"5.8",
-        "ixudra/curl": "6.*",
-        "cartalyst/stripe-laravel": "10.0.*",
         "laravelcollective/html": "~5.0"
     },
     "require-dev": {
