--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "ixudra/curl": "6.*",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "~5.0"
+        "laravelcollective/html": "~5.0",
+        "mews/captcha": "^3.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
