--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "~5.0",
-        "mews/captcha": "^3.1"
+        "mews/captcha": "^3.1",
+        "plivo/plivo-php": "^4.8"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
