--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "~5.0",
-        "maatwebsite/excel": "^3.1",
+        "maatwebsite/excel": "~2.1.0",
         "mews/captcha": "^3.1",
         "plivo/plivo-php": "^4.8"
     },
